# rust-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: lint.yml  publish.yml  rust.yml  test.yml
examples/: actix_web.rs  axum.rs  concurrency_comparation_qdrant_client.rs  concurrency_pure_grpc_client.rs  deprecated_search.rs  query.rs  search.rs  search_sync.rs
examples/web-integrations/: Cargo.toml
examples/web-integrations/src/: actix_web.rs  axum.rs  rocket.rs
proto/: collections.proto  points.proto  qdrant.proto
src/: auth.rs  builder_ext.rs  builder_types.rs  channel_pool.rs  client.rs  config.rs  error.rs  expressions.rs  external_api_keys.rs  filters.rs  google.protobuf.rs  grpc.health.v1.rs  grpc_ext.rs  grpc_macros.rs  interceptor.rs  lib.rs  manual_builder.rs  payload.rs  prelude.rs  qdrant.rs  serde.rs  serde_deser.rs  serde_impl.rs  user_agent.rs
src/builders/: abort_shard_transfer_builder.rs  acorn_search_params_builder.rs  binary_quantization_builder.rs  bool_index_params_builder.rs  clear_payload_points_builder.rs  collection_params_diff_builder.rs  context_example_pair_builder.rs  context_input_builder.rs  context_input_pair_builder.rs  count_points_builder.rs  create_alias_builder.rs  create_collection_builder.rs  create_field_index_collection_builder.rs  create_shard_key_builder.rs  create_shard_key_request_builder.rs  create_vector_name_request_builder.rs  datetime_index_params_builder.rs  decay_params_expression_builder.rs  delete_collection_builder.rs  delete_field_index_collection_builder.rs  delete_payload_points_builder.rs  delete_point_vectors_builder.rs  delete_points_builder.rs  delete_shard_key_request_builder.rs  delete_snapshot_request_builder.rs  delete_vector_name_request_builder.rs  dense_vector_builder.rs  dense_vector_creation_config_builder.rs  disabled_quantization_builder.rs  discover_batch_points_builder.rs  discover_input_builder.rs  discover_points_builder.rs  document_builder.rs  facet_counts_builder.rs  feedback_item_builder.rs  feedback_strategy_builder.rs  float_index_params_builder.rs  formula_builder.rs  geo_index_params_builder.rs  get_points_builder.rs  (+58 more)
src/client/: api_callable.rs  collection.rs  config.rs  mod.rs  points.rs  snapshot.rs
src/grpc_conversions/: extensions.rs  metadata.rs  mod.rs  primitives.rs  query.rs  vectors.rs
src/new_client/: collection.rs  config.rs  mod.rs
src/qdrant_client/: collection.rs  config.rs  error.rs  errors.rs  index.rs  mod.rs  payload.rs  points.rs  query.rs  search.rs  sharding_keys.rs  snapshot.rs  version_check.rs
src/qdrant_client/builders/: mod.rs  query.rs  sparse_vectors_config.rs  vector_input.rs  vectors.rs  vectors_config.rs
src/qdrant_client/builers/: mod.rs  payloads.rs  query.rs  vectors.rs  vectors_config.rs
src/qdrant_client/conversions/: expression.rs  mod.rs  payloads.rs  query.rs  vector_input.rs  vectors.rs  vectors_config.rs
tests/: builder_coverage.rs  integration-tests.sh  integration.rs  protos.rs  test_snippets.rs  test_utils.rs
tests/protos_append/: builder_ext.rs  grpc_macros.rs
tests/snippet_tests/: mod.rs  test_batch_update.rs  test_clear_payload.rs  test_collection_exists.rs  test_config_headers.rs  test_connect.rs  test_count_points.rs  test_create_collection.rs  test_create_collection_with_bq.rs  test_create_collection_with_metadata.rs  test_create_collection_with_turbo_quantization.rs  test_create_field_index.rs  test_create_full_snapshot.rs  test_create_shard_key.rs  test_create_snapshot.rs  test_create_text_index.rs  test_create_vector_name_dense.rs  test_create_vector_name_sparse.rs  test_delete_collection.rs  test_delete_field_index.rs  test_delete_full_snapshot.rs  test_delete_payload.rs  test_delete_points.rs  test_delete_shard_key.rs  test_delete_snapshot.rs  test_delete_vector_name.rs  test_delete_vectors.rs  test_discover_batch_points.rs  test_discover_points.rs  test_external_api_keys.rs  test_facets.rs  test_get_collection.rs  test_get_collection_aliases.rs  test_get_collections.rs  test_get_collections_aliases.rs  test_get_points.rs  test_list_full_snapshots.rs  test_list_shard_keys.rs  test_list_snapshots.rs  test_overwrite_payload.rs  (+32 more)
tests/snippets/: batch_update.rs  clear_payload.rs  collection_exists.rs  connect.rs  count_points.rs  create_collection.rs  create_collection_with_bq.rs  create_collection_with_metadata.rs  create_field_index.rs  create_full_snapshot.rs  create_shard_key.rs  create_snapshot.rs  create_text_index.rs  delete_collection.rs  delete_field_index.rs  delete_full_snapshot.rs  delete_payload.rs  delete_points.rs  delete_shard_key.rs  delete_snapshot.rs  delete_vectors.rs  discover_batch_points.rs  discover_points.rs  facets.rs  get_collection.rs  get_collection_aliases.rs  get_collections.rs  get_collections_aliases.rs  get_points.rs  list_full_snapshots.rs  list_shard_keys.rs  list_snapshots.rs  mod.rs  overwrite_payload.rs  query_document.rs  query_image.rs  query_point_groups.rs  query_points.rs  query_points_groups.rs  query_points_relevance_feedback.rs  (+25 more)
tools/: sync_proto.sh
